--- a/views/content/home.html
+++ b/views/content/home.html
@@ -25,7 +25,7 @@
     <div class="row">
       <div class="col-md-4">
         <div class="health-info">
-          <h3 class="brand-primary title text-uppercase text-bold font-gotham">Health <span class="block">Packages</span></h3>
+          <h3 class="brand-primary title text-uppercase font-gotham-bold">Health <span class="block">Packages</span></h3>
           <p class="text-justify health-descp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
           <a href="#/healthpackages" class="btn btn-primary text-uppercase font-gotham-bold letter-space know-more">know more</a>
           <div class="health-imgholder">
@@ -35,7 +35,7 @@
       </div>
       <div class="col-md-4">
         <div class="health-info">
-          <h3 class="brand-yellow title text-uppercase text-bold font-gotham">Health <span class="block">Products</span></h3>
+          <h3 class="brand-yellow title text-uppercase font-gotham-bold">Health <span class="block">Products</span></h3>
           <p class="text-justify health-descp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
           <a href="#/healthproducts" class="btn btn-yellow text-uppercase font-gotham-bold letter-space know-more">know more</a>
           <div class="health-imgholder">
@@ -45,7 +45,7 @@
       </div>
       <div class="col-md-4">
         <div class="health-info">
-          <h3 class="brand-blue title text-uppercase text-bold font-gotham">cool <span class="block">sculpting</span></h3>
+          <h3 class="brand-blue title text-uppercase font-gotham-bold">cool <span class="block">sculpting</span></h3>
           <p class="text-justify health-descp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
           <button class="btn btn-blue text-uppercase font-gotham-bold letter-space know-more">know more</button>
           <div class="health-imgholder">
@@ -126,9 +126,10 @@
                   <p class="text-justify">{{slide.descp}}</p>
                 </div>
                   <div class="get-round weight-info text-center">
-                  <span class="text-uppercase brand-brown-dark-bg">Lost</span>
-                  <br>
-                  <span class="weight-count font-vista">{{slide.weight}}kgs</span>
+                  <span class="text-uppercase brand-brown-dark-bg lost">Lost</span>
+                  <p>
+                    <span class="weight-number font-vista">{{slide.weight}}</span>kgs
+                  </p>
                 </div>
               </div>
             </div>
@@ -241,10 +242,10 @@
               <span class="text-light">SUMAN</span>
             </h4>
           </div>
-          <h4 class="letter-space">Ask and get an answer on the healthiest food tips</h4>
+          <h4 class="tips">Ask and get an answer on the healthiest food tips</h4>
           <form action="">
             <div class="form-group relate">
-              <select name="" id="" class="form-control">
+              <select name="" id="" class="form-control text-bold">
                 <option value="">Choose a Category</option>
                 <option value="">Category 1</option>
                 <option value="">Category 2</option>
