--- a/views/content/weightmanagement.html
+++ b/views/content/weightmanagement.html
@@ -17,9 +17,10 @@
           <div class="health-tab healthchart-list">
             <div class="inline-block v-top align">
               <div class="get-round weight-round">
-                <span class="text-uppercase brand-brown-dark-bg">loose</span>
-                <br>
-                <span class="weight-count font-vista">5 kgs</span>
+                <span class="text-uppercase brand-brown-dark-bg lost">loose</span>
+                <p>
+                  <span class="weight-number font-vista">5 </span>kgs
+                </p>
               </div>
             </div>
             <div class="tab-chart">
@@ -166,9 +167,10 @@
           <div class="healthchart-list">
             <div class="inline-block v-top align">
               <div class="get-round  weight-round">
-                <span class="text-uppercase brand-brown-dark-bg">loose</span>
-                <br>
-                <span class="weight-count font-vista">10 kgs</span>
+                <span class="text-uppercase brand-brown-dark-bg lost">loose</span>
+                <p>
+                  <span class="weight-number font-vista">10 </span>kgs
+                </p>
               </div>
             </div>
             <div class="tab-chart">
@@ -213,9 +215,10 @@
           <div class="healthchart-list">
             <div class="inline-block v-top align">
               <div class="get-round  weight-round">
-                <span class="text-uppercase brand-brown-dark-bg">loose</span>
-                <br>
-                <span class="weight-count font-vista">15 kgs</span>
+                <span class="text-uppercase brand-brown-dark-bg lost">loose</span>
+                <p>
+                  <span class="weight-number font-vista">15</span>kgs
+                </p>
               </div>
             </div>
             <div class="tab-chart">
@@ -260,9 +263,10 @@
           <div class="healthchart-list">
             <div class="inline-block v-top align">
               <div class="get-round  weight-round">
-                <span class="text-uppercase brand-brown-dark-bg">loose</span>
-                <br>
-                <span class="weight-count font-vista">20 kgs</span>
+                <span class="text-uppercase brand-brown-dark-bg lost">loose</span>
+                <p>
+                  <span class="weight-number font-vista">20 </span>kgs
+                </p>
               </div>
             </div>
             <div class="tab-chart">
@@ -328,9 +332,10 @@
                       <p class="text-justify">{{slide.descp}}</p>
                     </div>
                     <div class="get-round weight-info text-center">
-                      <span class="text-uppercase brand-brown-dark-bg">Lost</span>
-                      <br>
-                      <span class="weight-count">{{slide.weight}}kgs</span>
+                      <span class="text-uppercase brand-brown-dark-bg lost">Lost</span>
+                      <p>
+                        <span class="weight-number">{{slide.weight}}</span>kgs
+                      </p>
                     </div>
                   </div>
                 </div>
