--- a/views/footer.html
+++ b/views/footer.html
@@ -75,11 +75,11 @@
                     </div>
                     <div class="social-links social-links2 foot-sociallinks brand-primary-light">
                         <ul>
-                            <li><a href="" traget="_blank" class="brand-primary-lighter"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="" traget="_blank" class="brand-primary-lighter"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="" traget="_blank" class="brand-primary-lighter"><i class="fa fa-instagram"></i></a></li>
-                            <li><a href="" traget="_blank" class="brand-primary-lighter"><i class="fa fa-youtube"></i></a></li>
-                            <li><a href="" traget="_blank" class="brand-primary-lighter"><i class="fa fa-pinterest-p"></i></a></li>
+                            <li><a href="" traget="_blank"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="" traget="_blank"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="" traget="_blank"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="" traget="_blank"><i class="fa fa-youtube"></i></a></li>
+                            <li><a href="" traget="_blank"><i class="fa fa-pinterest-p"></i></a></li>
                         </ul>
                     </div>
                     <div class="copyright brand-brown-dark letter-space">
