--- a/views/content/imageconsulting.html
+++ b/views/content/imageconsulting.html
@@ -126,9 +126,9 @@
     </div>
   </div>
 
-  <div class="we-enroll font-gotham">
+  <div class="we-enroll">
     <div class="container">
-      <h2 class="text-uppercase text-center">How do we enroll:</h2>
+      <h2 class="text-uppercase text-center font-semibold">How do we enroll:</h2>
 
       <div class="session-one">
         <div class="row">
@@ -154,7 +154,7 @@
                         </div>
                       </div>
                       <div class="col-md-6">
-                        <p class="text-uppercase services"><span class="block font-gotham-bold">Pick any 2</span> of the above services</p>
+                        <p class="text-uppercase services font-gotham"><span class="block font-gotham-bold">Pick any 2</span> of the above services</p>
                       </div>
                     </div>
                   </div>
@@ -185,7 +185,7 @@
                         </div>
                       </div>
                       <div class="col-md-6">
-                        <p class="text-uppercase services"><span class="block font-gotham-bold">Pick any 8</span> of the above services</p>
+                        <p class="text-uppercase services font-gotham"><span class="block font-gotham-bold">Pick any 8</span> of the above services</p>
                       </div>
                     </div>
                   </div>
@@ -221,7 +221,7 @@
                         </div>
                       </div>
                       <div class="col-md-6">
-                        <p class="text-uppercase services"><span class="block font-gotham-bold">Pick any 4</span> of the above services</p>
+                        <p class="text-uppercase services font-gotham"><span class="block font-gotham-bold">Pick any 4</span> of the above services</p>
                       </div>
                     </div>
                   </div>
@@ -252,7 +252,7 @@
                         </div>
                       </div>
                       <div class="col-md-6">
-                        <p class="text-uppercase services"><span class="block font-gotham-bold">Make your</span> plan with tina</p>
+                        <p class="text-uppercase services font-gotham"><span class="block font-gotham-bold">Make your</span> plan with tina</p>
                       </div>
                     </div>
                   </div>
