--- a/sass/main.scss
+++ b/sass/main.scss
@@ -364,7 +364,7 @@ button {
   position: absolute;
   top: 40%;
   left: 50%;
-  @include transform(-50%,-40%);
+  @include transform(translate(-50%,-40%));
   }
 }
 /* Start writing sass here */
@@ -486,7 +486,7 @@ button {
   }
 }
 .people-info {
-  padding: 30px 0;
+  padding: 30px 0 20px;
   h3,
   h5 {
     margin: 0;
