--- a/views/content/weightmanagement.html
+++ b/views/content/weightmanagement.html
@@ -319,12 +319,12 @@
           <uib-carousel interval="myInterval" no-wrap="noWrapSlides">
             <uib-slide ng-repeat="slide in weightinfo" active="slide.active">
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-6">
                   <div class="story-video">
                     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dnmzOqhu62k" frameborder="0" allowfullscreen></iframe>
                   </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-6">
                   <div class="view-detail relate">
                     <h4 class="text-left brand-brown-dark name font-semibold letter-space">{{slide.name}}</h4>
                     <span class="text-left block brand-primary letter-space">{{slide.location}}</span>
