--- a/views/content/home.html
+++ b/views/content/home.html
@@ -23,7 +23,7 @@
   </div>
   <div class="health-cat">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-6">
         <div class="health-info">
           <h3 class="brand-primary title text-uppercase font-gotham-bold">Health <span class="block">Packages</span></h3>
           <p class="text-justify health-descp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
@@ -33,7 +33,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-6">
         <div class="health-info">
           <h3 class="brand-yellow title text-uppercase font-gotham-bold">Health <span class="block">Products</span></h3>
           <p class="text-justify health-descp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
@@ -43,7 +43,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-12">
         <div class="health-info">
           <h3 class="brand-blue title text-uppercase font-gotham-bold">cool <span class="block">sculpting</span></h3>
           <p class="text-justify health-descp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
@@ -61,9 +61,9 @@
     <div class="row">
       <div class="col-md-offset-1 col-md-10">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-4 col-sm-4">
             <div class="info text-center">
-              <div class=" inline-block v-top">
+              <div class=" inline-block v-top census">
                 <h5 class="text-uppercase text-bold brand-brown-dark font-semibold health-title">Total number of
                   <span class="block">Clients</span>
                 </h5>
@@ -74,9 +74,9 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 col-sm-4">
             <div class="info  text-center people-weight-count">
-              <div class="inline-block v-top">
+              <div class="inline-block v-top census">
                 <h5 class="text-uppercase text-bold brand-brown-dark font-semibold health-title">Total
                   <span class="block count">Weight Loss</span>
                 </h5>
@@ -89,9 +89,9 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="info  text-center no-border">
-              <div class="inline-block v-top">
+          <div class="col-md-4 col-sm-4">
+            <div class="info no-border">
+              <div class="inline-block v-top census">
                 <h5 class="text-uppercase text-bold  brand-brown-dark font-semibold health-title">Presence in
                   <span class="block">Countries</span>
                 </h5>
@@ -151,7 +151,7 @@
     <div class="row">
       <div class="col-md-offset-1 col-md-10">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6 col-sm-6">
             <div class="diet-info">
               <h4 class="text-center text-bold letter-space font-semibold">RECIPES</h4>
               <div class="diet-holder m-center">
@@ -163,7 +163,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 col-sm-6">
             <div class="diet-info">
               <h4 class="text-center text-bold letter-space font-semibold">CALORIE METER</h4>
               <div class="diet-holder m-center">
@@ -183,7 +183,7 @@
 <div class="blog-section brand-brown-gray-bg">
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 col-sm-6">
         <div class="blog-main brand-graylight-bg">
           <div class="heading">
             <h4 class="text-bold font-semibold">BLOG</h4>
@@ -235,7 +235,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 col-sm-6">
         <div class="askqts blog-main brand-graylight-bg">
           <div class="heading">
             <h4 class="font-semibold">ASK
