--- a/views/content/healthproducts.html
+++ b/views/content/healthproducts.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="row">
 
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-4">
           <div class="product-cat">
             <h3 class="text-uppercase brand-brown-dark font-semibold">Categories</h3>
             <a href="" class="btn text-uppercase brand-primary-bg white font-semibold">Vitamins &amp; Minerals</a>
@@ -86,10 +86,10 @@
           </div>
         </div>
 
-        <div class="col-md-9">
+        <div class="col-md-9 col-sm-8">
           <div class="row">
 
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
               <div class="single-product text-center">
                 <div class="product-image round">
                   <img src="img/health-products/1.jpg" alt="" class="img-responsive">
@@ -102,7 +102,7 @@
               </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
               <div class="single-product text-center">
                 <div class="product-image round">
                   <img src="img/health-products/2.jpg" alt="" class="img-responsive">
@@ -115,7 +115,7 @@
               </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
               <div class="single-product text-center">
                 <div class="product-image round">
                   <img src="img/health-products/3.jpg" alt="" class="img-responsive">
@@ -128,11 +128,7 @@
               </div>
             </div>
 
-          </div>
-
-          <div class="row">
-
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
               <div class="single-product text-center">
                 <div class="product-image round">
                   <img src="img/health-products/1.jpg" alt="" class="img-responsive">
@@ -145,7 +141,7 @@
               </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
               <div class="single-product text-center">
                 <div class="product-image round">
                   <img src="img/health-products/2.jpg" alt="" class="img-responsive">
@@ -158,7 +154,7 @@
               </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
               <div class="single-product text-center">
                 <div class="product-image round">
                   <img src="img/health-products/3.jpg" alt="" class="img-responsive">
@@ -171,11 +167,7 @@
               </div>
             </div>
 
-          </div>
-
-          <div class="row">
-
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
               <div class="single-product text-center">
                 <div class="product-image round">
                   <img src="img/health-products/1.jpg" alt="" class="img-responsive">
@@ -188,7 +180,7 @@
               </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
               <div class="single-product text-center">
                 <div class="product-image round">
                   <img src="img/health-products/2.jpg" alt="" class="img-responsive">
@@ -201,7 +193,7 @@
               </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
               <div class="single-product text-center">
                 <div class="product-image round">
                   <img src="img/health-products/3.jpg" alt="" class="img-responsive">
@@ -213,12 +205,7 @@
                 <a href="" class="btn btn-primary text-uppercase">Add to cart</a>
               </div>
             </div>
-
-          </div>
-
-          <div class="row">
-
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
               <div class="single-product text-center">
                 <div class="product-image round">
                   <img src="img/health-products/1.jpg" alt="" class="img-responsive">
@@ -231,7 +218,7 @@
               </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
               <div class="single-product text-center">
                 <div class="product-image round">
                   <img src="img/health-products/2.jpg" alt="" class="img-responsive">
@@ -244,7 +231,7 @@
               </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
               <div class="single-product text-center">
                 <div class="product-image round">
                   <img src="img/health-products/3.jpg" alt="" class="img-responsive">
